# DiamondDust

./: .gitignore  AGENTS.md  GOVERNANCE_REVIEW_NOTES.md  README.md  pyproject.toml  目录结构.md
.github/workflows/: ci.yml
docs/: 00_PROJECT_CHARTER.md  01_MVP_SCOPE.md  02_PRODUCT_SPEC.md  03_ARCHITECTURE_BOUNDARY.md  04_DOMAIN_MODEL.md  05_DATA_AND_SCHEMA_CONTRACT.md  06_AI_PIPELINE_CONTRACT.md  07_QUALITY_AND_TEST_POLICY.md  08_DEPENDENCY_AND_PORTABILITY_POLICY.md  09_REVIEW_GATES.md  10_GIT_WORKFLOW.md  11_AGENT_OPERATING_MODEL.md  12_SKILL_USAGE_POLICY.md  13_EXECUTION_PLAN_AND_MEMORY_POLICY.md  14_CONSTRAINT_ESCALATION_POLICY.md
docs/context/: completed-milestones.md  decisions.md  open-questions.md  project-state.md
docs/designs/: 2026-05-20-first-provider-adapter-design.md  2026-05-23-deepseek-provider-adapter.md  2026-05-23-first-openai-manual-live-smoke-decision-package.md
docs/guides/: local-trial-extraction-json.md  local-trial-user-feedback.md  trial-client-alpha-distribution.md  trial-client.md
docs/templates/: ESCALATION_REQUEST_TEMPLATE.md  EXECUTION_PLAN_TEMPLATE.md  MILESTONE_REVIEW_TEMPLATE.md  PROVIDER_ADAPTER_DECISION_PACKAGE_TEMPLATE.md
frontend/trial-client/: README.md  index.html  package-lock.json  package.json
scripts/: package-trial-client-alpha.py
scripts/windows/: start-trial-client.cmd  start-trial-client.ps1
skills/constraint-escalation/: SKILL.md
skills/git-workflow/: SKILL.md
skills/milestone-review/: SKILL.md
skills/pr-review/: SKILL.md
skills/spec-to-plan/: SKILL.md
src/diamonddust/: __init__.py  __main__.py  cli.py  (+1 more)
(+237 files in other folders)
