[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "diamonddust"
version = "0.1.0"
description = "Local-first semantic knowledge compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openai>=1.0.0"]

[project.scripts]
diamonddust = "diamonddust.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"diamonddust.fixtures.local_trial" = ["*.md", "*.json"]
